src/resources/css/packlink-checkout.css
#pl-picker-modal {
	position: fixed;
	display: none;
	top: 10%;
	left: 10%;
	height: 80%;
	width: 80%;
	z-index: 1100;
	box-shadow: 0 0 10px 2px #e1e1e1;
	border: none !important;
}

#pl-picker-modal a {
	-webkit-box-shadow: unset;
	box-shadow: unset;
}

#pl-drop-off-iframe {
	display: inherit;
	width: 100%;
	height: 100%;
}

.pl-checkout-carrier-image {
	display: inline-block;
	height: 30px !important;
	vertical-align: middle;
	margin-right: 8px;
}

#pl-picker-modal svg {
	position: absolute;
	top: -40px;
	right: -40px;
	cursor: pointer;
	width: 40px;
	box-shadow: 0 0 10px 2px #e1e1e1;
	border: none !important;
	height: 40px;
	border-radius: 50%;
	background-color: white;
}

.pl-wide-shipping {
	display: block;
	height: 1px;
	width: 200px;
	background-color: transparent;
}

@media screen and (max-width: 800px) {
	#pl-picker-modal svg {
		top: -30px;
		right: -30px;
		width: 30px;
		height: 30px;
	}
}

